# f1toolbox

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  error.txt  explore.ipynb  pyproject.toml  requirements.txt
.github/workflows/: docker-image-build.yaml  docker-image.yml  pytest.yaml  ruff-CI.yaml  ruff-ci.yaml  snyk-security.yaml  sqlfluff-ci.yaml
.ipynb_checkpoints/: explore-checkpoint.ipynb
dagster_deployment/: Dockerfile  __init__.py  requirements.txt
dagster_deployment/assets/: constants.py  fantasy_bronze.py  fantasy_landing.py  fantasy_results.py  fastf1_bronze.py  fastf1_landing.py
dagster_deployment/jobs/: __init__.py
dagster_deployment/partitions/: __init__.py
dagster_deployment/resources/: __init__.py  fantasy_resource.py  utils.py
dagster_deployment/utils/: constructor_mapping.csv  fantasy_results_parser.py  fastf1_extractor.py  fastf1_parser.py  iomanager.py  schemas.py
dagster_deployment/utils/map_fantasy/: constructor_mapping.csv  driver_mapping.csv
dagster_deployment/utils/map_fastf1/: constructor_mapping.csv  driver_mapping.csv
docs/: f1toolbox.drawio
infra/: dagster_values.yaml
src/: config.py  extract_fantasy.py  iomanager.py  parse_constructor_results.py  parse_races.py
src/airbyte/: airbyte_conf_script.py  latest_airbyte_connections.json
src/clickhouse_setup/: create_tables.sql  insert_into_tables.sql
src/dagster/: __init__.py  dbt_project.py  definitions.py  user_deployment.yaml
src/dagster/assets/: airbyte_assets.py  constants.py  dbt_assets.py  fantasy_bronze.py  fantasy_landing.py  fantasy_silver.py  fastf1_bronze.py  fastf1_landing.py
src/dagster/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/dagster/dbt/macros/: normalized_event_scores.sql
src/dagster/dbt/models/: model_groups.yml  sources.yaml
src/dagster/jobs/: __init__.py
src/dagster/partitions/: __init__.py
src/dagster/resources/: __init__.py  retrieve_k8s_secret.py
src/dagster/utils/: fantasy_results_parser.py  fastf1_extractor.py  fastf1_parser.py  gcs_to_bigquery.py  iomanager.py  schemas.py
src/dagster/utils/map_fastf1/: constructor_mapping.csv
src/dagster_deployment/: __init__.py  requirements.txt
src/dagster_deployment/assets/: constants.py  fantasy_bronze.py  fantasy_landing.py  fantasy_silver.py  fastf1_bronze.py  fastf1_landing.py
src/dagster_deployment/utils/: fastf1_extractor.py  fastf1_parser.py
src/dagster_deployment/utils/map_fantasy/: driver_mapping.csv
src/dbt/: dbt_project.yml  package-lock.yml  packages.yml
src/dbt/models/: model_groups.yml  schema.yaml
src/dbt/models/silver/: dim_assets.sql  (+8 more)
src/infra/: dagster_values.yaml
src/raw_operations/: extract_fantasy.py  parse_fantasy_constructor_results.py  parse_races.py
src/raw_operations/fantasy/: extract_fantasy.py  fantasy_results_parser.py  parse_fantasy_assets.py  parse_fantasy_constructor_results.py  parse_fantasy_driver_results.py
src/utils/: config.py  constructor_mapping.csv  iomanager.py
tests/: accel_calculations.ods  test_telemetry_calculations.py
website/: README.md  docusaurus.config.js  package-lock.json
website/blog/: authors.yml
website/blog/2024-11-26-Overview/: index.md
website/docs/airbyte/: _category_.json  airbyte.md
website/docs/dagster/: _category_.json  dagster.md
website/docs/dbt/: _category_.json  bigquery.md  dbt_core.md
website/docs/gcp/: _category_.json  terraform.md
website/docs/metabase/: _category_.json
website/docs/overview/: _category_.json  architecture.mdx  features.md  learning-goals.md
website/docs/polars/: _category_.json  move_from_pandas.md
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
(+61 files in other folders)
